--- a/tabs/css/tabs.css
+++ b/tabs/css/tabs.css
@@ -3,9 +3,13 @@
 }
 
 div.tab-pane {
-  display: none;
+  opacity: 0;
+  display: block;
+  transition: opacity, 1000;
 }
 
 div.tab-pane.active {
-  display: block;
+/*  display: block;*/
+  opacity: 1;
+  transition: opacity, 1000;
 }
