--- a/carousel/carousel.css
+++ b/carousel/carousel.css
@@ -20,6 +20,7 @@ div.carousels > div.items > img {
 div.carousels > div.items > img.active {
   left: 0;
   transition: left 3s linear;
+
 }
 
 div.carousels > div.items > img:not(.active) {
@@ -28,7 +29,8 @@ div.carousels > div.items > img:not(.active) {
 
 div.carousels > div.items > img.active.left {
   left: -100%;
-}
+/*  transition: left 3s linear;
+*/}
 
 div.carousels > div.items > img.active.right {
   left: 100%;
